# javascalpel

./: .gitignore  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/c/: CMakeLists.txt  com_tianscar_util_Scalpel.h  javascalpel.c
src/main/java/com/tianscar/util/: Scalpel.java
src/test/java/com/tianscar/util/test/: ScalpelTest.java
